<resources>
    <string name="app_name">Pingon</string>
    <string name="app_version">2.2.2</string>
    <string name="ok">Entendido</string>
    <string name="cancel">Cancelar</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="welcome_message">Sincronizando.\n Por favor espere ...</string>
    <string name="pdf_gen_message">Generando PDF.\n Por favor espere ...</string>
    <string name="loader_files">Pingon Cargador de archivos</string>
    <string name="title_activity_login">Inicio de sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="title_activity_nuevo_formulario">NuevoFormularioActivity</string>
    <string name="title_activity_informe_detalles">InformeDetalles</string>

    <string name="login_message">Por favor inicie sesión con sus credenciales de acceso para continuar:</string>

    <string name="buzon_button_nuevo_informe">Nuevo informe</string>
    <string name="buzon_button_borradores">Borradores</string>
    <string name="buzon_button_pendientes_envio">Pendientes de envío</string>
    <string name="buzon_button_enviados">Enviados</string>

    <string name="completed_fields_message">
        Todos los campos obligatorios están completos.\nYa puede enviar este informe.
    </string>
    <string name="profile_save_message">La información de su perfil de usuario ha sido actualizada correctamente</string>
    <string name="profile_save_message_error">Ha ocurrido un error al momento de actualizar sus datos.\nAsegúrese que posee una conexión a Internet.\nSi el problema persiste por favor comuníquese con nosotros.</string>

    <string name="profile_title">Perfil de usuario</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="change_email">Actualizar email</string>
    <string name="change_sign">Actualizar firma</string>

    <string name="no_internet">Sin conexión</string>
    <string name="first_time_no_internet">
        No se ha podido detectar una conexión a Internet.
        Cuando inicia la aplicación por primera vez es necesario para poder sincronizar la base de datos.
    </string>

    <string name="url_signin">http://104.154.36.61:2234/signin</string>
    <string name="url_sync_area_negocio">http://104.154.36.61:2234/area-negocio</string>
    <string name="url_sync_emp_company">http://104.154.36.61:2234/emp-company</string>
    <string name="url_sync_emp_projects">http://104.154.36.61:2234/emp-projects</string>
    <string name="url_sync_emp_brands">http://104.154.36.61:2234/emp-brands</string>

    <string name="url_sync_listas_generales">http://104.154.36.61:2234/listas-generales</string>
    <string name="url_sync_listas_generales_items">http://104.154.36.61:2234/listas-generales-items</string>

    <string name="url_sync_emp_products">http://104.154.36.61:2234/emp-products</string>
    <string name="url_sync_formularios">http://104.154.36.61:2234/formularios</string>
    <string name="url_sync_checklist">http://104.154.36.61:2234/checklist</string>
    <string name="url_sync_list_options">http://104.154.36.61:2234/list-options</string>
    <string name="url_sync_documentos">http://104.154.36.61:2234/documentos</string>
    <string name="url_sync_registros">http://104.154.36.61:2234/registros</string>
    <string name="url_profile_update">http://104.154.36.61:2234/profile/update</string>
    <string name="url_sync_upload_file">http://104.154.36.61:2234/upload</string>
    <string name="url_rollback_data_sent">http://104.154.36.61:2234/rollback-data-sent</string>
    <string name="url_download">http://pingon.newbits.cl/appm/dl.php</string>
    <string name="url_sync_upload_data">http://104.154.36.61:2234/upload/data</string>

    <string name="url_feriados">http://104.154.36.61:2234/feriados</string>

    <string name="title_activity_eliminar">ELIMINAR</string>

    <string name="delete_draft">Eliminar borrador</string>
    <string name="delete_draft_question">¿Esta seguro que desea eliminar este borrador?</string>
</resources>
