<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RelativeLayoutProfile"
    tools:context="cl.pingon.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/change_sign"
                    android:drawableRight="@drawable/feather_white"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/change_sign"
                    android:layout_width="match_parent"
                    android:gravity="left|center_vertical"
                    android:layout_height="70dp" />

                <ImageView
                    android:id="@+id/firma"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <android.support.design.widget.TextInputLayout
                    android:paddingTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/change_password"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/change_email"/>

                </android.support.design.widget.TextInputLayout>




            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

</RelativeLayout>
